--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           var map = new mapboxgl.Map({
             container: "map",
             style: "mapbox://styles/reliefweb/ckk5nhokq20ae17l8df8xothq",
+            zoom: 3,
             minZoom: 2,
             maxZoom: 5,
             center: [0, 20],
