--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 sourceLayer: "wrl_polbnda_1m_ungis",
               type: "vector",
               url: "mapbox://reliefweb.3xu48qmc",
-              promoteId: "Terr_ID",
+              promoteId: "Terr_Name",
             });
 
             const popup = new mapboxgl.Popup({
