--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         source: "Nexus_fill",
                         sourceLayer: "wrl_polbnda_1m_ungis",
                         
-                        id: row.Terr_ID,
+                        id: row.Terr_Name,
                       },
                       {
                         Country: row.COUNTRY,
