--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                       {
                         Country: row.COUNTRY,
                         Nexus: row.NEXUS,
-                      
+				                CName: row.CNAME,
+				                Link: row.LINK                      
                       }
                     );
                   });
