--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       .mapboxgl-popup {
         max-width: 400px;
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font: 12px/20px 'Roboto COndensed', Arial, Helvetica, sans-serif;
     }
     </style>
   </head>
