--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                         Country: row.COUNTRY,
                         Nexus: row.NEXUS,
 			CName: row.CNAME,
-			Link: row.LINK                      
+			Link: row.LINK,
+			Description: row.DESCRIPTION
                       }
                     );
                   });
