--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       }
       .mapboxgl-popup {
         max-width: 400px;
+	-webkit-filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.6));
+        filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.6));
         font: 12px/20px 'Roboto COndensed', Arial, Helvetica, sans-serif;
     }
     </style>
