--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
                         Nexus: row.NEXUS,
 			CName: row.CNAME,
 			Link: row.LINK,
-			Description: row.DESCRIPTION
+			Description: row.DESCRIPTION,
+			Analysis: row.ANALYSIS,
+			Outcomes: row.OUTCOMES,
+			pnp: row.PNP,
+			finance: row.FINANCE
                       }
                     );
                   });
