--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://fonts.googleapis.com/css?family=Roboto"
+      href="https://fonts.googleapis.com/css?family=Roboto Condensed"
     />
 
     <style>
