--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             });
 
             const popup = new mapboxgl.Popup({
-             closeButton: false,
+             closeButton: true,
             closeOnClick: false
             });
         map.on('mousemove', (e) => {
