--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@
           //handles when the state is highlighted, creating a pointer and a popup
           else if (features[0].state['Nexus'] === 'YES'){
             map.getCanvas().style.cursor = 'pointer'
-            const country = features[0].state['CName']
-            const Link = features[0].state['Link']
-	    const Analysis = features[0].state['Analysis']
-            popup.trackPointer().setHTML('<h4><strong><center>'+country+'</h4></strong></center>'+'Analysis: '+Analysis+'<br>Download the report <a href='+Link + '>here</a></p>').addTo(map)
+            const Country = features[0].state['CName'];
+            const Link = features[0].state['Link'];
+	    const Analysis = features[0].state['Analysis'];
+	    const Outcomes = e.features[0].state['Outcomes'];
+	    const PnP =  e.features[0].state['PnP'];
+	    const Finance =  e.features[0].state['Finance'];
+            popup.trackPointer().setHTML('<h4><strong><center>'+Country+'</h4></strong></center>'+'Analysis: '+Analysis+'<br>Download the report <a href='+Link + '>here</a></p>').addTo(map)
             
           }
           //handles everything else
